Bug #16466  	DD: SHOW CREATE TABLE does not show TABLESPACE table_space1 STORAGE DISK